# app/Virtual/Models/User.php
@@ -1,0 +1,84 @@
+<?php
+/**
+ * @OA\Schema(
+ *     title="User",
+ *     description="User model",
+ *     @OA\Xml(
+ *         name="User"
+ *     )
+ * )
+ */
+class User
+{
+
+    /**
+     * @OA\Property(
+     *     title="id",
+     *     description="id of the user",
+     *     format="int64",
+     *     example=1
+     * )
+     *
+     * @var integer
+     */
+    private $id;
+
+    /**
+     * @OA\Property(
+     *      title="name",
+     *      description="Name of the user",
+     *      example="John Doe"
+     * )
+     *
+     * @var string
+     */
+    public $name;
+
+    /**
+     * @OA\Property(
+     *      title="email",
+     *      description="Email of the user",
+     *      example="abcdef@gmail.com"
+     * )
+     *
+     * @var string
+     */
+    public $email;
+    
+    /**
+     * @OA\Property(
+     *      title="password",
+     *      description="Password of the user",
+     *      example="abcdef123.com"
+     * )
+     *
+     * @var string
+     */
+    public $password;
+
+    /**
+     * @OA\Property(
+     *     title="Created at",
+     *     description="Created at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $created_at;
+
+    /**
+     * @OA\Property(
+     *     title="Updated at",
+     *     description="Updated at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $updated_at;
+}
